<resources>
    <string name="app_name">TTUber</string>
    <string name="username_hint"> Username</string>
    <string name="password_hint"> Password</string>
    <string name="password_hint_pass"> Pass</string>
    <string name="password_hint_again"> Again</string>
    <string name="t_number"> T-Number</string>
    <string name="login_button">Login</string>
    <string name="register_button">Register</string>
    <string name="register_here">Register Here</string>
    <string name="forgot_password">Forgot Password?</string>
</resources>
